# bitfield

./: CHANGELOG  INSTALL  Makefile.in  README  README.md  bitfield-internals.h  bitfield.c  bitfield.h  config.h.in  configure  configure.ac  libbitfield.pc.in
examples/: Makefile.in  bfand.c  bfcat.c  bfnormalize.c  bfor.c  bfxor.c  int2bf.c  random.c  rule30  rule30.c
man/: Makefile.in  bf2char.3  bf2int.3  bf2long.3  bf2short.3  bf2str.3  bf_converters.3  bf_converters.3.in  bfand.3  bfand.3.in  bfcat.3  bfcat.3.in  bfclone.3  bfclone.3.in  bfcmp.3  bfcmp.3.in  bfcpy.3  bfcpy.3.in  bffs.3.in  bfhamming.3  bfhamming.3.in  bfisempty.3  bfisempty.3.in  bfnew.3  bfnew.3.in  bfnormalize.3  bfnormalize.3.in  bfpopcount.3  bfpopcount.3.in  bfpos.3  bfpos.3.in  bfprint.3  bfprint.3.in  bfresize.3  bfresize.3.in  bfrev.3  bfrev.3.in  bfsetall.3  bfsetall.3.in  bfsetbit.3  (+11 more)
tests/: Makefile.in  test01.c  test02.c  test03.c  test04.c  test05.c  test06.c  test07.c  test08.c  test09.c  test1.c  test10.c  test11.c  test12.c  test13.c  test14.c  test15.c  test16.c  test17.c  test18.c  test19.c  test2.c  test20.c  test21.c  test22.c  test23.c  test24.c  test25.c  test26.c  test27.c  test28.c  test29.c  test3.c  test30.c  test31.c  test32.c  test33.c  test34.c  test35.c  test36.c  (+22 more)
